--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@
                                     <div class="card border-0 text-center">
                                         <div class="card-body">
                                             <i class="fa fa-link fa-5x" aria-hidden="true"></i>
-
+                                            <br/><br/>
                                             <h2 class="card-title">
                                                 Trade Assistance</h2>
                                             <p class="card-text">All government office like Central, State and
@@ -888,11 +888,12 @@
                                         </div>
                                     </div>
                                 </div>
+                                
                                 <div class="col-md-4">
                                     <div class="card border-0 text-center">
                                         <div class="card-body">
                                             <i class="fa fa-rocket fa-5x" aria-hidden="true"></i>
-
+                                            <br/><br/>
                                             <h2 class="card-title">
                                                 Less Administrative Work</h2>
                                             <p class="card-text">There is a less administrative work required
@@ -905,8 +906,7 @@
                                 <div class="col-md-4">
                                     <div class="card border-0 text-center">
                                         <div class="card-body">
-                                            <i class="fa fa-music fa-5x" aria-hidden="true"></i>
-
+                                            <img src="assets/img/trinity/Customer.png" alt="" width="25%" height="auto"> 
                                             <h2 class="card-title">
                                                 Unique Benefits</h2>
                                             <p class="card-text text-rght">There is a possibility for GeM registration
@@ -1045,6 +1045,51 @@
                 </div>
             </div>
         </section>
+
+        <section class="about-low-area section-padding40">
+            <div class="container">
+                <div class="row justify-content-between">
+                    <div class="col-xl-6 col-lg-6 col-md-10">
+                        <div class="about-caption mb-50">
+                            <!-- Section Tittle -->
+                            <div class="section-title mb-35">
+
+                                <h2>Trinity Balaji Registration For Startup</h2>
+                                <h3>Benefits For Startups on GeM</h3>
+                            </div>
+                            <p>
+                            <ul class="custom-font">
+                                <li><i class="fas fa-check orangeiconcolor"></i> High ROI</li>
+                                <li><i class="fas fa-check orangeiconcolor"></i> Easy Registration</li>
+                                <li><i class="fas fa-check orangeiconcolor"></i> Less Work For Profit</li>
+                                <li><i class="fas fa-check orangeiconcolor"></i> Get Orders Regularly</li>
+                                <li><i class="fas fa-check orangeiconcolor"></i> Large Orders For Startups</li>
+                                <li><i class="fas fa-check orangeiconcolor"></i> Direct Government Purchase</li>
+                                <li><i class="fas fa-check orangeiconcolor"></i> Large Number Of Products & Services</li>
+
+                            </ul>
+
+                            </p>
+                        </div>
+
+                    </div>
+                    <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
+                        <div class="about-right-cap">
+                            <div class="about-right-img">
+                                <img src="assets/img/trinity/Pic9.png" alt="">
+                            </div>
+                            <!-- <div class="img-cap">c
+                                    <span>20</span>
+                                    <p>Years of experience</p>
+                            </div> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        
 
 
 
