--- a/index.html
+++ b/index.html
@@ -1121,7 +1121,7 @@
                     <div class="col-xs-12 col-lg-12 col-md-10">
                         <div class="section-title mb-35">
                             <h2 class="text-center">
-                                Who can sell on GeM?
+                                Who can sell on Trinity Balaji?
                             </h2>
                         </div>
                     </div>
