--- a/index.html
+++ b/index.html
@@ -1160,7 +1160,10 @@
                                 <h2 class="card-title"><i class="fas fa-star"></i>
                                     Resell On Trinity Balaji
                                 </h2>
-                                <p class="card-text text-rght">We can make you a reseller on gem portal in just Few Hours. Just provide us all the required documents, your products list with specification. We will live your products as soon as possible. Start on gem today.</p>
+                                <p class="card-text text-rght">We can make you a reseller on gem portal in just Few
+                                    Hours. Just provide us all the required documents, your products list with
+                                    specification. We will live your products as soon as possible. Start on gem today.
+                                </p>
                             </div>
                         </div>
                         <div class="card border-0">
@@ -1192,6 +1195,44 @@
 
 
 
+
+        <section class="about-low-area section-padding40">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-xl-5 col-lg-5 col-md-8 offset-md-1 offset-sm-1">
+                        <div class="about-right-cap">
+                            <div>
+                                <img src="assets/img/trinity/Pic11.png" alt="">
+                            </div>
+                            <!--  <div class="img-cap">
+                            <span>20</span>
+                            <p>Years of experience</p>
+                        </div> -->
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-7 col-md-9">
+                        <div class="about-caption mb-50">
+                            <!-- Section Tittle -->
+                            <div class="row justify-content-center">
+                                <div class="col-xs-12 col-lg-12 col-md-10">
+                                    <div class="section-title mb-35">
+                                        <h2 class="text-center">
+                                            Unable To Find Your Products Category On Trinity Balaji Portal?
+                                        </h2>
+                                    </div>
+                                </div>
+                            </div>
+                            <p>
+                                We GEM Consultants can help you in uploading your product in the right category. Our
+                                teams have experience of 4+ years on GeM. Our Experts can upload your products in the
+                                right category on the gem portal. Just provide us the product specifications, and your
+                                products will be upload on GeM Portal. We are here to work for you.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
         <!--? Gallery Area Start -->
