--- a/index.html
+++ b/index.html
@@ -1195,7 +1195,6 @@
 
 
 
-
         <section class="about-low-area section-padding40">
             <div class="container">
                 <div class="row align-items-center">
@@ -1204,15 +1203,11 @@
                             <div>
                                 <img src="assets/img/trinity/Pic11.png" alt="">
                             </div>
-                            <!--  <div class="img-cap">
-                            <span>20</span>
-                            <p>Years of experience</p>
-                        </div> -->
+                           
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg-7 col-md-9">
                         <div class="about-caption mb-50">
-                            <!-- Section Tittle -->
                             <div class="row justify-content-center">
                                 <div class="col-xs-12 col-lg-12 col-md-10">
                                     <div class="section-title mb-35">
@@ -1228,6 +1223,44 @@
                                 right category on the gem portal. Just provide us the product specifications, and your
                                 products will be upload on GeM Portal. We are here to work for you.
                             </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="about-low-area section-padding40">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-xl-6 col-lg-7 col-md-9">
+                        <div class="about-caption mb-50">
+                            <!-- Section Tittle -->
+                            <div class="row justify-content-center">
+                                <div class="col-xs-12 col-lg-12 col-md-10">
+                                    <div class="section-title mb-35">
+                                        <h2 class="text-center">
+                                            Secure Your Brand On Trinity Balaji With Our Help                                        </h2>
+                                    </div>
+                                </div>
+                            </div>
+                            <p>
+                                We can help you in securing your brand name on trinity portal, so that no once can sell with your brand name on trinity without your authorisation and approval. This is a best way to make yourself a brand on trinity portal.
+
+                            </p>
+                            <div class="row">
+                                <div class="col text-center">
+                                    <button type="button" class=" btn-success-custom">Contact Us Now</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-5 col-lg-5 col-md-8 offset-md-1 offset-sm-1">
+                        <div class="about-right-cap">
+                            <div>
+                                <img src="assets/img/trinity/Pic12.png" alt="">
+                            </div>
+                            
                         </div>
                     </div>
                 </div>
