--- a/index.html
+++ b/index.html
@@ -1268,6 +1268,49 @@
         </section>
 
 
+
+        <section class="about-low-area section-padding40">
+            <div class="container">
+                
+                <div class="row justify-content-center">
+                    <div class="col-xs-12 col-lg-12 col-md-10">
+                        <div class="section-title mb-35">
+                            <h1 class="text-center">Start On Trinity Balaji As Seller & Grow
+                            </h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-xs-12 col-lg-12 col-md-10">
+                        <div class="section-title mb-35">
+                            <h2 class="text-center">Benefits Of Trading On Trinity Balaji​
+
+                            </h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-xl-12 col-lg-12 col-md-10">
+                        <div class="display-7">                         
+                                <ul>
+                                    <li><span><i class="fas fa-play fa-xs"></i></span> Uniform and efficient purchase procedures</li>
+                                    <li><i class="fas fa-play fa-xs"></i> Buyers are Government Departments Only</li>
+                                    <li><i class="fas fa-play fa-xs"></i> Unique benefits for startups with relaxed norms</li>
+                                    <li><i class="fas fa-play fa-xs"></i> An excellent facility to recommend new products</li>
+                                    <li><i class="fas fa-play fa-xs"></i> Direct and easy access to all government departments</li>
+                                    <li><i class="fas fa-play fa-xs"></i> One-stop-shop for bids and reverse auction on services and products</li>
+                                    <li><i class="fas fa-play fa-xs"></i> A comprehensive and easy-to-use dashboard for selling and monitoring your supplies as well as payments</li>
+    
+                                </ul>
+                       </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+
         <!--? Gallery Area Start -->
         <div class="gallery-area">
             <div class="container-fluid p-0 fix">
