--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="about-right-img">
-                                <img src="assets/img/trinity/Pic9.png" alt="">
+                                <img src="assets/img/trinity/Pic7.png" alt="">
                             </div>
                             <!--  <div class="img-cap">
                             <span>20</span>
@@ -1180,7 +1180,7 @@
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="text-centerc">
-                                <img src="assets/img/trinity/Pic10.png" alt="" width="80%" height="auto">
+                                <img src="assets/img/trinity/Pic6.png" alt="" width="80%" height="auto">
                             </div>
                             <div class="row">
                                 <div class="col text-center">
@@ -1379,7 +1379,7 @@
 
 
 
-        <section class="about-low-area section-padding40">
+        <section class="about-low-area pt-10">
             <div class="container">
 
                 <div class="row justify-content-center">
@@ -1401,6 +1401,40 @@
                                 reseller can only sell with the brand name of manufacturer or the product. With
                                 authorisation any one can resell on gem portal. For more information please contact us
                                 we will guide you regarding same.
+                            </p>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <section class="about-low-area section-padding40">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
+                        <div class="about-right-cap">
+                            <div class="about-right-img">
+                                <img src="assets/img/trinity/Pic13.png" alt="">
+                            </div>
+                            <!--  <div class="img-cap">
+                                <span>20</span>
+                                <p>Years of experience</p>
+                            </div> -->
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 col-md-10">
+                        <div class="about-caption">
+                            <!-- Section Tittle -->
+                            <div class="section-tittle mb-35">
+                                <h2>Experts Ready To Help You</h2>
+                            </div>
+                            <p>
+                                We have Trinity Balaji Portal Experts who are always ready to help you with all your queries. Get
+                                all your work done from our experts, meanwhile you can relax. Let them do all the work
+                                for you. Our team will complete all your work as per the desired time updated to you.
+                                There is no need to worry about anything our teams take care of everything for you.
                             </p>
                         </div>
 
