--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
                         <textarea name="contact_us_message" id="contact_us_message"
                             class="form-control txtbox"></textarea>
                         <br />
-                        <input type="submit" value="Submit" class="btn-success-custom">
+                        <input type="submit" value="Submit" class="ml-190 btn-success-custom">
 
                     </div>
 
@@ -1431,7 +1431,8 @@
                                 <h2>Experts Ready To Help You</h2>
                             </div>
                             <p>
-                                We have Trinity Balaji Portal Experts who are always ready to help you with all your queries. Get
+                                We have Trinity Balaji Portal Experts who are always ready to help you with all your
+                                queries. Get
                                 all your work done from our experts, meanwhile you can relax. Let them do all the work
                                 for you. Our team will complete all your work as per the desired time updated to you.
                                 There is no need to worry about anything our teams take care of everything for you.
@@ -1444,6 +1445,105 @@
             </div>
         </section>
 
+        <section>
+            <div class="container contact-us-custom">
+                <div class="row">
+                    <div class="col-md-3"></div>
+                    <div class="col-md-6">
+                        <h1> Please Contact Us For More Details :</h1>
+                        <label>Name :</label>
+                        <input type="text" name="contact_us_name" id="contact_us_id" class="form-control txtbox">
+                        <label> Email :</label>
+                        <input type="email" name="contact_us_email" id="contact_us_id" class="form-control txtbox">
+                        <label>Phone :</label>
+                        <input type="text" name="contact_us_phone" id="contact_us_phone" class="form-control txtbox">
+                        <label>Message :</label>
+                        <textarea name="contact_us_message" id="contact_us_message"
+                            class="form-control txtbox"></textarea>
+                        <br />
+                        <input type="submit" value="Submit" class="ml-190 btn-success-custom">
+
+                    </div>
+
+                    <div class="col-md-3"></div>
+
+                </div>
+            </div>
+
+            </div>
+            </div>
+
+            </div>
+
+            </div>
+        </section>
+
+
+
+
+        <section class="about-low-area section-padding40">
+            <div class="container">
+
+                <div class="row">
+                    <div class="col-xs-12 col-lg-12 col-md-10">
+                        <div class="section-title mb-35">
+                            <h1 class="text-center">
+                                Why Choose Us
+                            </h1>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xs-12 col-lg-12 col-md-10">
+                        <div class="section-title mb-35">
+                            <h2 class="text-center">
+                                We Have 4+ Years Of Experience
+                            </h2>
+                        </div>
+                    </div>
+                </div>
+                    <div class="row justify-content-between mb-30">
+                        <div class="col-md-6">
+                            <div class="card border-0">
+                                <div class="card-body">
+                                    <h2 class="card-title display-6"><i class="fas fa-thumbs-up yellowiconcolor fa-2x"></i>
+                                         Assured Customer Satisfaction</h2>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 text-right">
+                            <div class="card border-0">
+                                <div class="card-body">
+                                    <h2 class="card-title display-6"><i class="fas fa-lock yellowiconcolor fa-2x"></i>
+                                           Client Data Confidentiality</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row justify-content-between mb-30">
+                        <div class="col-md-6">
+                            <div class="card border-0">
+                                <div class="card-body">
+                                    <h2 class="card-title display-6"><i class="far fa-money-bill-alt yellowiconcolor fa-2x"></i>
+                                         No Hidden Charges</h2>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6 text-right">
+                            <div class="card border-0">
+                                <div class="card-body">
+                                    <h2 class="card-title display-6"><i class="fas fa-laptop yellowiconcolor fa-2x"></i>
+                                         Secured Online Payments</h2>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
         <!--? Gallery Area Start -->
