--- a/index.html
+++ b/index.html
@@ -1418,15 +1418,10 @@
                             <div class="about-right-img">
                                 <img src="assets/img/trinity/Pic13.png" alt="">
                             </div>
-                            <!--  <div class="img-cap">
-                                <span>20</span>
-                                <p>Years of experience</p>
-                            </div> -->
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-10">
                         <div class="about-caption">
-                            <!-- Section Tittle -->
                             <div class="section-tittle mb-35">
                                 <h2>Experts Ready To Help You</h2>
                             </div>
@@ -1503,47 +1498,90 @@
                         </div>
                     </div>
                 </div>
-                    <div class="row justify-content-between mb-30">
-                        <div class="col-md-6">
-                            <div class="card border-0">
-                                <div class="card-body">
-                                    <h2 class="card-title display-6"><i class="fas fa-thumbs-up yellowiconcolor fa-2x"></i>
-                                         Assured Customer Satisfaction</h2>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 text-right">
-                            <div class="card border-0">
-                                <div class="card-body">
-                                    <h2 class="card-title display-6"><i class="fas fa-lock yellowiconcolor fa-2x"></i>
-                                           Client Data Confidentiality</h2>
-                                </div>
+                <div class="row justify-content-between mb-30">
+                    <div class="col-md-6">
+                        <div class="card border-0">
+                            <div class="card-body">
+                                <h2 class="card-title display-6"><i class="fas fa-thumbs-up yellowiconcolor fa-2x"></i>
+                                    Assured Customer Satisfaction</h2>
                             </div>
                         </div>
                     </div>
-                    <div class="row justify-content-between mb-30">
-                        <div class="col-md-6">
-                            <div class="card border-0">
-                                <div class="card-body">
-                                    <h2 class="card-title display-6"><i class="far fa-money-bill-alt yellowiconcolor fa-2x"></i>
-                                         No Hidden Charges</h2>
-                                </div>
+                    <div class="col-md-6 text-right">
+                        <div class="card border-0">
+                            <div class="card-body">
+                                <h2 class="card-title display-6"><i class="fas fa-lock yellowiconcolor fa-2x"></i>
+                                    Client Data Confidentiality</h2>
                             </div>
                         </div>
-
-                        <div class="col-md-6 text-right">
-                            <div class="card border-0">
-                                <div class="card-body">
-                                    <h2 class="card-title display-6"><i class="fas fa-laptop yellowiconcolor fa-2x"></i>
-                                         Secured Online Payments</h2>
-                                </div>
+                    </div>
+                </div>
+                <div class="row justify-content-between mb-30">
+                    <div class="col-md-6">
+                        <div class="card border-0">
+                            <div class="card-body">
+                                <h2 class="card-title display-6"><i
+                                        class="far fa-money-bill-alt yellowiconcolor fa-2x"></i>
+                                    No Hidden Charges</h2>
                             </div>
                         </div>
+                    </div>
 
+                    <div class="col-md-6 text-right">
+                        <div class="card border-0">
+                            <div class="card-body">
+                                <h2 class="card-title display-6"><i class="fas fa-laptop yellowiconcolor fa-2x"></i>
+                                    Secured Online Payments</h2>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            </div>
+        </section>
+
+        <section class="about-low-area section-padding40">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-xl-6 col-lg-7 col-md-9">
+                        <div class="about-caption mb-50">
+                            <!-- Section Tittle -->
+                            <div class="row justify-content-center">
+                                <div class="col-xs-12 col-lg-12 col-md-10">
+                                    <div class="section-title mb-35">
+                                        <h2 class="text-center">
+                                            Our Services Are Available In Every State Of India.
+                                        </h2>
+                                    </div>
+                                </div>
+                            </div>
+                            <p>
+                                GeM Consultants has helped numerous organisations to get the online GeM enrolment
+                                effectively for pan India. You may reach us to get your GeM Registration in Delhi,
+                                Mumbai, Bangalore, Kolkata, Kanpur, Bareilly, Lucknow, Kanpur, Ghaziabad, Ludhiana,
+                                Faridabad, Meerut, Varanasi, Srinagar, Amritsar, Allahabad, Chandigarh, Bareilly,
+                                Moradabad, Gurgaon, Aligarh, Jalandhar or some other cities in India.
+                                <div class="row">
+                                    <div class="col text-center">
+                                        <button type="button" class="btn-primary1 ">Start Now</button>
+                                    </div>
+                                </div>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-xl-5 col-lg-5 col-md-8 offset-md-1 offset-sm-1">
+                        <div class="about-right-cap">
+                            <div>
+                                <img src="assets/img/trinity/Pic14.png" alt="">
+                            </div>
+
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
+
 
 
         <!--? Gallery Area Start -->
