--- a/index.html
+++ b/index.html
@@ -349,10 +349,6 @@
                             <div class="about-right-img">
                                 <img src="assets/img/trinity/Pic4.png" alt="">
                             </div>
-                            <!--  <div class="img-cap">
-                            <span>20</span>
-                            <p>Years of experience</p>
-                        </div> -->
                         </div>
                     </div>
                 </div>
@@ -1235,7 +1231,6 @@
                 <div class="row align-items-center">
                     <div class="col-xl-6 col-lg-7 col-md-9">
                         <div class="about-caption mb-50">
-                            <!-- Section Tittle -->
                             <div class="row justify-content-center">
                                 <div class="col-xs-12 col-lg-12 col-md-10">
                                     <div class="section-title mb-35">
@@ -1581,6 +1576,52 @@
                 </div>
             </div>
         </section>
+
+        <section class="about-low-area section-padding40">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-xs-12 col-lg-12 col-md-10">
+                        <div class="section-title mb-35">
+                            <h2 class="text-center" data-animation="fadeInRight" data-delay="3s">
+                                Government e-Marketplace Training
+                            </h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-between">
+                    <div class="col-xl-6 col-lg-6 col-md-10">
+                        <div class="about-caption mb-50">
+                          
+                            <p>
+                                We provide complete gem portal training so that you don’t need to go somewhere else to get it all done for you.
+                            <ul class="custom-font">
+                                <li><i class="fas fa-check orangeiconcolor"></i> Registration</li>
+                                <li><i class="fas fa-check orangeiconcolor"></i> Brand Approval</li>
+                                <li><i class="fas fa-check orangeiconcolor"></i> Profile Completion</li>
+                                <li><i class="fas fa-check orangeiconcolor"></i> Products Upload</li>
+                                <li><i class="fas fa-check orangeiconcolor"></i> Services Upload</li>
+                                <li><i class="fas fa-check orangeiconcolor"></i> Bidding On Tenders</li>
+                            </ul>
+
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
+                        <div class="about-right-cap">
+                            <div class="about-right-img">
+                                <img src="assets/img/trinity/Pic15.png" alt="">
+                            </div>
+                            <!-- <div class="img-cap">c
+                                    <span>20</span>
+                                    <p>Years of experience</p>
+                            </div> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- About  End-->
+      
 
 
 
