--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <!-- Header Start -->
         <div class="header-area">
             <div class="main-header ">
-                <div class="header-top d-none d-lg-block">
+               <!--  <div class="header-top d-none d-lg-block">
                     <div class="container">
                         <div class="col-xl-12">
                             <div class="row d-flex justify-content-between align-items-center">
@@ -62,7 +62,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="header-bottom header-sticky">
                     <div class="container">
                         <div class="row align-items-center">
@@ -1175,13 +1175,13 @@
                     </div>
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
-                            <div class="text-centerc">
-                                <img src="assets/img/trinity/Pic6.png" alt="" width="80%" height="auto">
+                            <div class="text-center">
+                                <img src="assets/img/trinity/Pic6.png" alt="" width="60%" height="auto">
                             </div>
-                            <div class="row">
-                                <div class="col text-center">
-                                    <button type="button" class=" btn-success-custom">Register Now</button>
-                                </div>
+                        </div>
+                        <div class="row pt-4">
+                            <div class="col text-center">
+                                <button type="button" class=" btn-success-custom">Register Now</button>
                             </div>
                         </div>
                     </div>
@@ -1710,7 +1710,7 @@
 
 
         <!--? Gallery Area Start -->
-        <div class="gallery-area">
+      <!--   <div class="gallery-area">
             <div class="container-fluid p-0 fix">
                 <div class="row no-gutters">
                     <div class="col-xl-4 col-lg-4 col-md-6">
@@ -1757,10 +1757,10 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Gallery Area End -->
         <!--? Categories Area Start -->
-        <div class="categories-area section-padding40 gray-bg">
+       <!--  <div class="categories-area section-padding40 gray-bg">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
@@ -1821,10 +1821,10 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- cat End -->
         <!-- Services Area start -->
-        <div class="service-area section-bg" data-background="assets/img/gallery/section_bg01.png">
+        <!-- <div class="service-area section-bg" data-background="assets/img/gallery/section_bg01.png">
             <div class="container">
                 <div class="row align-items-end no-gutters">
                     <div class="col-lg-4 col-md-6 col-sm-12">
@@ -1877,10 +1877,10 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Services Area End -->
         <!-- Want To work -->
-        <section class="wantToWork-area gray-bg ">
+        <!-- <section class="wantToWork-area gray-bg ">
             <div class="container">
                 <div class="wants-wrapper w-padding2">
                     <div class="row align-items-center justify-content-between">
@@ -1898,11 +1898,10 @@
                 </div>
             </div>
         </section>
-        <!-- Want To work End -->
+         --><!-- Want To work End -->
         <!-- Contact form Start -->
-        <div class="contact-form testimonial-area section-padding40 mb-40">
+        <!-- <div class="contact-form testimonial-area section-padding40 mb-40">
             <div class="container">
-                <!-- Section Tittle -->
                 <div class="row justify-content-center">
                     <div class="col-xl-5 col-lg-6 col-md-8 col-sm-10">
                         <div class="section-tittle text-center mb-100">
@@ -1913,9 +1912,7 @@
                 </div>
                 <div class="row no-gutters">
                     <div class="col-lg-6 col-md-12">
-                        <!-- Testimonial Start -->
                         <div class="h1-testimonial-active">
-                            <!-- Single Testimonial -->
                             <div class="single-testimonial">
                                 <div class="testimonial-caption">
                                     <p>"Working in conjunction with humanitarian aid agencies, we have supported
@@ -1925,7 +1922,6 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Single Testimonial -->
                             <div class="single-testimonial">
                                 <div class="testimonial-caption">
                                     <p>"Working in conjunction with humanitarian aid agencies, we have supported
@@ -1938,7 +1934,6 @@
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12">
-                        <!-- slider -->
                         <div class="single-man-slider">
                             <div class="man-slider-active">
                                 <div class="single-mam-img">
@@ -1957,7 +1952,6 @@
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12">
-                        <!-- galary -->
                         <div class="single-gallery">
                             <div class="gallery-img" style="background-image: url(assets/img/gallery/gallery2.png);">
                             </div>
@@ -1972,7 +1966,6 @@
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12">
-                        <!-- contact-form -->
                         <div class="form-wrapper">
                             <div class="row ">
                                 <div class="col-xl-12">
@@ -2023,9 +2016,9 @@
                 </div>
             </div>
         </div>
-        <!-- Contact form End -->
+         --><!-- Contact form End -->
         <!--? Blog Area Start -->
-        <section class="home-blog-area pb-bottom">
+        <!-- <section class="home-blog-area pb-bottom">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-md-6">
@@ -2066,9 +2059,9 @@
                 </div>
             </div>
         </section>
-        <!-- Blog Area End -->
+         --><!-- Blog Area End -->
         <!--?  Map Area start  -->
-        <section class="Map-area">
+        <!-- <section class="Map-area">
             <div class="d-none d-sm-block">
                 <div id="map" style="height: 480px; position: relative; overflow: hidden;">
                     <div
@@ -2524,9 +2517,9 @@
                     </script>
             </div>
         </section>
-        <!-- Map Area End -->
+         --><!-- Map Area End -->
         <!-- Want To work 2-->
-        <section class="wantToWork-area">
+        <!-- <section class="wantToWork-area">
             <div class="container">
                 <div class="wants-wrapper w-padding3">
                     <div class="row align-items-center justify-content-between">
@@ -2549,10 +2542,10 @@
                 </div>
             </div>
         </section>
-        <!-- Want To work End 2-->
+         --><!-- Want To work End 2-->
     </main>
     <footer>
-        <!-- Footer Start-->
+        <!-- Footer Start--><!-- 
         <div class="footer-area footer-padding">
             <div class="container">
                 <div class="row d-flex justify-content-between">
@@ -2603,7 +2596,6 @@
                                 <h4>Newsletter</h4>
                                 <p>Subscribe our newsletter to get updates about our services</p>
                             </div>
-                            <!-- Form -->
                             <div class="footer-form">
                                 <div id="mc_embed_signup">
                                     <form target="_blank"
@@ -2627,28 +2619,17 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- footer-bottom area -->
         <div class="footer-bottom-area">
             <div class="container">
                 <div class="footer-border">
-                    <div class="row d-flex justify-content-between align-items-center">
+                    <div class="row justify-content-center">
                         <div class="col-xl-9 col-lg-8">
                             <div class="footer-copy-right">
                                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                </p>
-                                <p>Copyright ©2020 All rights reserved | This template is made with <i
-                                        class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com/"
-                                        target="_blank">Colorlib</a></p>
-                            </div>
-                        </div>
-                        <div class="col-xl-3 col-lg-4">
-                            <!-- Footer Social -->
-                            <div class="footer-social f-right">
-                                <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="https://bit.ly/sai4ull"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#"><i class="fas fa-globe"></i></a>
-                                <a href="#"><i class="fab fa-instagram"></i></a>
+                             
+                                <p>@ Copyright All rights reserved by Trinity Balaji</p>
                             </div>
                         </div>
                     </div>
