--- a/about.html
+++ b/about.html
@@ -13,6 +13,8 @@
     <script>
         $(function(){
             $('#header').load("header.html");
+            $('#footer').load("footer.html");
+
         });
     </script>
     <!-- CSS here -->
@@ -259,28 +261,12 @@
                     <a href="#">REFUND POLICY</a>
                 </div>
             </div>
-        </div>
+        </div> 
         </section>
 
       
-        <!-- footer-bottom area -->
-        <div class="footer-bottom-area">
-            <div class="container">
-                <div class="footer-border">
-                    <div class="row justify-content-center">
-                        <div class="col-xl-12 col-lg-12">
-                            <div class="footer-copy-right">
-                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                             
-                                <p class="text-center">@ Copyright All rights reserved by Trinity Balaji</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Footer End-->
-    </footer>
+       <div id="footer"></div>
+       >
     <!--? Search model Begin -->
     <div class="search-model-box">
         <div class="h-100 d-flex align-items-center justify-content-center">
