working on our services tab

--- a/services.html
+++ b/services.html
@@ -50,8 +50,17 @@
    <div id="header"></div>
     <main>
         <!--? Hero Start -->
-       <div class="cut-corner"><h1 class="display-1 pt-200 text-light">What We Provide</h1></div>
+        <section>
+            <div class="section-title mb-35">
+
+                <h1>Our Services</h1>
+            </div>
+       <div class="cut-corner"><h1 class="display-1 pt-200 text-light font-weight-bold">What We Provide</h1></div>
+    </section>
         <!-- Hero End -->
+
+
+
         <!--? Categories Area Start -->
         <div class="categories-area section-padding30">
             <div class="container">
