--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script>
         $(function(){
             $('#header').load("header.html");
-            $('#footer').load("footer.html");
+            $('#footer').load("header.html");
 
         });
     </script>
